Fix the regression caused by #476

--- a/src/css/features/no-bg-modal.css
+++ b/src/css/features/no-bg-modal.css
@@ -27,8 +27,7 @@ html.btd-on {
     }
   }
 
-  .btd__no_bg_modal
-  :matches(.mdl-btn-media, .is-inverted-light .mdl-btn-media) {
+  .btd__no_bg_modal :matches(.mdl-btn-media, .is-inverted-light .mdl-btn-media) {
     opacity: 1;
   }
 
@@ -48,5 +47,16 @@ html.btd-on {
 
   .btd__no_bg_modal :matches(.ovl, .overlay) {
     background: color(black a(80%));
+  }
+
+  .btd__no_bg_modal .js-modal-panel.mdl.s-full.med-fullpanel {
+    background: transparent;
+    pointer-events: none;
+    box-shadow: none;
+  }
+
+  .js-mediatable .js-modal-panel .js-mediaembed,
+  .mdl-btn-media {
+    pointer-events: all;
   }
 }
