Remove the need for the `tabs` permission

--- a/src/css/features/no-bg-modal.css
+++ b/src/css/features/no-bg-modal.css
@@ -57,7 +57,8 @@ html.btd-on {
 
   .js-mediatable .js-modal-panel .js-mediaembed,
   .mdl-btn-media,
-  .btd-embed-container > * {
+  .btd-embed-container > *,
+  .med-tweet {
     pointer-events: all;
   }
 }
