Decrease content warning button size

--- a/src/css/features/content-warnings.css
+++ b/src/css/features/content-warnings.css
@@ -19,7 +19,7 @@
   color: #fff;
   font-size: 0.7em;
   font-weight: bold;
-  padding: 3px 7px;
+  padding: 0 6px;
   border-radius: 36px;
   margin-left: 5px;
 }
