--- a/src/css/features/small-icns.css
+++ b/src/css/features/small-icns.css
@@ -7,6 +7,7 @@ html.btd-on {
       width: auto !important;
       float: left !important;
       margin-right: 4px;
+      margin-bottom: 100px !important;
 
       .label {
         display: none;
