--- a/src/css/features/small-icns.css
+++ b/src/css/features/small-icns.css
@@ -7,6 +7,7 @@ html.btd-on {
       width: auto !important;
       float: left !important;
       margin-right: 4px;
+      margin-bottom: 100px !important;
 
       .label {
         display: none;
@@ -14,11 +15,11 @@ html.btd-on {
     }
   }
 
-  .js-schedule-datapicker-holder > .popover {
+  .js-schedule-datepicker-holder > .popover {
     margin-top: 51px;
 
     .caret {
-      left: calc(50% - 5px);
+      left: calc(50%);
     }
   }
 }
