--- a/src/features/verifiedBadges.css
+++ b/src/features/verifiedBadges.css
@@ -1,22 +1,22 @@
-.js-stream-item.btd-is-from-verified:not(.btd-is-from-verified-mini)>.js-stream-item-content>.js-tweet>.tweet-header .item-img.tweet-img,
-.js-stream-item.btd-is-from-verified-mini>.js-stream-item-content>.activity-header>.nbfc {
+.js-stream-item.btd-is-from-verified:not(.btd-is-from-verified-mini) > .js-stream-item-content > .tweet > .tweet-header .item-img.tweet-img,
+.js-stream-item.btd-is-from-verified-mini > .js-stream-item-content > .activity-header > .nbfc {
   position: relative;
 }
 
-.js-stream-item.btd-is-from-verified-mini>.js-stream-item-content>.activity-header>.nbfc::before,
-.js-stream-item.btd-is-from-verified:not(.btd-is-from-verified-mini)>.js-stream-item-content>.js-tweet>.tweet-header .item-img.tweet-img::before {
-  content: "";
+.js-stream-item.btd-is-from-verified-mini > .js-stream-item-content > .activity-header > .nbfc::before,
+.js-stream-item.btd-is-from-verified:not(.btd-is-from-verified-mini) > .js-stream-item-content > .tweet > .tweet-header .item-img.tweet-img::before {
+  content: '';
   line-height: 1;
   position: absolute;
   width: 1em;
   height: 1em;
   background-size: 100% 100%;
-  background-image: url("../assets/verified-icon.svg");
+  background-image: url('../assets/verified-icon.svg');
   font-size: 18px;
   z-index: 9;
 }
 
-.js-stream-item.btd-is-from-verified:not(.btd-is-from-verified-mini)>.js-stream-item-content>.js-tweet>.tweet-header .item-img.tweet-img {
+.js-stream-item.btd-is-from-verified:not(.btd-is-from-verified-mini) > .js-stream-item-content > .tweet > .tweet-header .item-img.tweet-img {
   /* Allows */
   position: absolute;
 
@@ -25,7 +25,7 @@
   width: 36px;
 }
 
-.js-stream-item.btd-is-from-verified:not(.btd-is-from-verified-mini)>.js-stream-item-content>.js-tweet>.tweet-header .item-img.tweet-img::before {
+.js-stream-item.btd-is-from-verified:not(.btd-is-from-verified-mini) > .js-stream-item-content > .tweet > .tweet-header .item-img.tweet-img::before {
   bottom: -3px;
   right: -3px;
 }
@@ -33,11 +33,11 @@
 /*
  small avatar on activities ("Bob liked", "Alice retweeted", "Damien added you to a list", etc)
  */
-.js-stream-item.btd-is-from-verified-mini>.js-stream-item-content>.activity-header>.nbfc {
+.js-stream-item.btd-is-from-verified-mini > .js-stream-item-content > .activity-header > .nbfc {
   position: relative;
 }
 
-.js-stream-item.btd-is-from-verified-mini>.js-stream-item-content>.activity-header>.nbfc::before {
+.js-stream-item.btd-is-from-verified-mini > .js-stream-item-content > .activity-header > .nbfc::before {
   top: 7px;
   left: 8px;
   transform-origin: bottom right;
@@ -45,6 +45,6 @@
 }
 
 /* Hide the vanilla verified badge in columns */
-.stream-item .js-tweet:not(.txt-mute)>header .sprite-verified-mini {
+.stream-item .tweet:not(.txt-mute) > header .sprite-verified-mini {
   display: none;
 }
