--- a/src/features/addAccentColors.css
+++ b/src/features/addAccentColors.css
@@ -3,10 +3,10 @@
   /* --btd-accent-color:; */
 }
 
-.column-header-link,
-.app-nav-link,
-.app-nav-tab,
-.app-search-fake {
+:matches(html, html.dark) .column-header-link,
+:matches(html, html.dark) .app-nav-link,
+:matches(html, html.dark) .app-nav-tab,
+:matches(html, html.dark) .app-search-fake {
   color: var(--btd-accent-color) !important;
 }
 
@@ -17,7 +17,13 @@
 :matches(html, html.dark) .color-twitter-blue,
 :matches(html, html.dark) .other-replies-link,
 :matches(html, html.dark) .other-replies-link:hover,
-.facet-subtitle {
+:matches(html, html.dark).facet-subtitle,
+:matches(html, html.dark) .compose .other-replies-link,
+:matches(html, html.dark) .compose .other-replies-link:hover,
+:matches(html, html.dark) .inline-reply .other-replies-link,
+:matches(html, html.dark) .inline-reply .other-replies-link:hover,
+:matches(html, html.dark) .med-flaglink,
+:matches(html, html.dark) .med-origlink {
   color: var(--btd-accent-color);
 }
 
@@ -34,14 +40,15 @@
   color: var(--btd-accent-color);
 }
 
-button.btn-on-dark,
-input[type='button'].btn-on-dark {
+:matches(html, html.dark) button.btn-on-dark,
+:matches(html, html.dark) input[type='button'].btn-on-dark {
   color: var(--btd-accent-color);
   background: transparent;
 }
 
 :matches(html, html.dark) .dropdown-menu .is-selected,
-.lst-group .selected {
+:matches(html, html.dark) .lst-group .selected,
+:matches(html, html.dark) .lst .s-selected {
   background-color: var(--btd-accent-color) !important;
 }
 
@@ -79,49 +86,70 @@ input[type='button'].btn-on-dark {
   border: none !important;
 }
 
-.Button.btn-fav.s-favorited:hover,
-.Button.Button--primary.is-hover,
-.Button.Button--primary:hover,
-.Button.is-hover.btn-fav.s-favorited,
-.ButtonGroup--primary > .Button.is-hover,
-.ButtonGroup--primary > .Button:hover,
-.ButtonGroup--primary > .ButtonGroup > .Button.is-hover,
-.ButtonGroup--primary > .ButtonGroup > .Button:hover,
-.ButtonGroup--primary > .ButtonGroup > button.is-hover,
-.ButtonGroup--primary > .ButtonGroup > button:hover,
-.ButtonGroup--primary > .ButtonGroup > input.is-hover[type='button'],
-.ButtonGroup--primary > .ButtonGroup > input:hover[type='button'],
-.ButtonGroup--primary > button.is-hover,
-.ButtonGroup--primary > button:hover,
-.ButtonGroup--primary > input.is-hover[type='button'],
-.ButtonGroup--primary > input:hover[type='button'],
-.s-following .follow-btn:hover .Button.following-text:hover,
-.s-following .follow-btn:hover .Button.is-hover.following-text,
-.s-following .follow-btn:hover button.following-text:hover,
-.s-following .follow-btn:hover button.is-hover.following-text,
-.s-following .follow-btn:hover input.following-text:hover[type='button'],
-.s-following .follow-btn:hover input.is-hover.following-text[type='button'],
-button.btn-fav.s-favorited:hover,
-button.Button--primary.is-hover,
-button.Button--primary:hover,
-button.is-hover.btn-fav.s-favorited,
-input.btn-fav.s-favorited:hover[type='button'],
-input.Button--primary.is-hover[type='button'],
-input.Button--primary:hover[type='button'],
-input.is-hover.btn-fav.s-favorited[type='button'],
-.lst-group .selected a:hover {
+:matches(html, html.dark) .Button.btn-fav.s-favorited:hover,
+:matches(html, html.dark) .Button.Button--primary.is-hover,
+:matches(html, html.dark) .Button.Button--primary:hover,
+:matches(html, html.dark) .Button.is-hover.btn-fav.s-favorited,
+:matches(html, html.dark) .ButtonGroup--primary > .Button.is-hover,
+:matches(html, html.dark) .ButtonGroup--primary > .Button:hover,
+:matches(html, html.dark) .ButtonGroup--primary > .ButtonGroup > .Button.is-hover,
+:matches(html, html.dark) .ButtonGroup--primary > .ButtonGroup > .Button:hover,
+:matches(html, html.dark) .ButtonGroup--primary > .ButtonGroup > button.is-hover,
+:matches(html, html.dark) .ButtonGroup--primary > .ButtonGroup > button:hover,
+:matches(html, html.dark) .ButtonGroup--primary > .ButtonGroup > input.is-hover[type='button'],
+:matches(html, html.dark) .ButtonGroup--primary > .ButtonGroup > input:hover[type='button'],
+:matches(html, html.dark) .ButtonGroup--primary > button.is-hover,
+:matches(html, html.dark) .ButtonGroup--primary > button:hover,
+:matches(html, html.dark) .ButtonGroup--primary > input.is-hover[type='button'],
+:matches(html, html.dark) .ButtonGroup--primary > input:hover[type='button'],
+:matches(html, html.dark) .s-following .follow-btn:hover .Button.following-text:hover,
+:matches(html, html.dark) .s-following .follow-btn:hover .Button.is-hover.following-text,
+:matches(html, html.dark) .s-following .follow-btn:hover button.following-text:hover,
+:matches(html, html.dark) .s-following .follow-btn:hover button.is-hover.following-text,
+:matches(html, html.dark) .s-following .follow-btn:hover input.following-text:hover[type='button'],
+:matches(html, html.dark) .s-following .follow-btn:hover input.is-hover.following-text[type='button'],
+:matches(html, html.dark) button.btn-fav.s-favorited:hover,
+:matches(html, html.dark) button.Button--primary.is-hover,
+:matches(html, html.dark) button.Button--primary:hover,
+:matches(html, html.dark) button.is-hover.btn-fav.s-favorited,
+:matches(html, html.dark) input.btn-fav.s-favorited:hover[type='button'],
+:matches(html, html.dark) input.Button--primary.is-hover[type='button'],
+:matches(html, html.dark) input.Button--primary:hover[type='button'],
+:matches(html, html.dark) input.is-hover.btn-fav.s-favorited[type='button'],
+:matches(html, html.dark) .lst-group .selected a:hover {
   background-color: var(--btd-accent-color) !important;
   background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)) !important;
 }
 
-.app-search-fake {
+:matches(html, html.dark) .lst-launcher .is-disabled a:active i,
+:matches(html, html.dark) .lst-launcher .is-disabled a:focus i,
+:matches(html, html.dark) .lst-launcher .is-disabled a:hover i,
+:matches(html, html.dark) .lst-launcher .is-disabled a i {
+  color: var(--btd-accent-color) !important;
+}
+
+:matches(html, html.dark) .lst-launcher a:active i,
+:matches(html, html.dark) .lst-launcher a:focus i,
+:matches(html, html.dark) .lst-launcher a:hover i {
+  color: var(--btd-accent-color) !important;
+  opacity: 0.9;
+}
+
+:matches(html, html.dark) .app-search-fake {
   border-color: var(--btd-accent-color) !important;
 }
 
-/* Re-set the color of the button to hide the drawer */
+/* Reset the color of the button to hide the drawer */
 html[class] .js-hide-drawer.Button.tweet-button,
 html[class] .js-hide-drawer.Button.tweet-button:hover {
   background-image: none !important;
   color: white;
   background: #3d5466 !important;
+}
+
+:matches(html, html.dark) button.btn-on-dark.btn-fav-unfav-text,
+:matches(html, html.dark) button.Button--danger.btn-on-dark,
+:matches(html, html.dark) input.btn-fav-unfav-text[type='button'].btn-on-dark,
+:matches(html, html.dark) input[type='button'].Button--danger.btn-on-dark {
+  color: white;
 }
