--- a/src/features/addAccentColors.css
+++ b/src/features/addAccentColors.css
@@ -3,153 +3,155 @@
   /* --btd-accent-color:; */
 }
 
-:matches(html, html.dark) .column-header-link,
-:matches(html, html.dark) .app-nav-link,
-:matches(html, html.dark) .app-nav-tab,
-:matches(html, html.dark) .app-search-fake {
-  color: var(--btd-accent-color) !important;
-}
+:matches(html, html.dark) {
+  & .column-header-link,
+  & .app-nav-link,
+  & .app-nav-tab,
+  & .app-search-fake {
+    color: var(--btd-accent-color) !important;
+  }
 
-:matches(html, html.dark) a,
-:matches(html, html.dark) a:focus,
-:matches(html, html.dark) a:hover,
-:matches(html, html.dark) a:active,
-:matches(html, html.dark) .color-twitter-blue,
-:matches(html, html.dark) .other-replies-link,
-:matches(html, html.dark) .other-replies-link:hover,
-:matches(html, html.dark).facet-subtitle,
-:matches(html, html.dark) .compose .other-replies-link,
-:matches(html, html.dark) .compose .other-replies-link:hover,
-:matches(html, html.dark) .inline-reply .other-replies-link,
-:matches(html, html.dark) .inline-reply .other-replies-link:hover,
-:matches(html, html.dark) .med-flaglink,
-:matches(html, html.dark) .med-origlink {
-  color: var(--btd-accent-color);
-}
+  & a,
+  & a:focus,
+  & a:hover,
+  & a:active,
+  & .color-twitter-blue,
+  & .other-replies-link,
+  & .other-replies-link:hover,
+  & .facet-subtitle,
+  & .compose .other-replies-link,
+  & .compose .other-replies-link:hover,
+  & .inline-reply .other-replies-link,
+  & .inline-reply .other-replies-link:hover,
+  & .med-flaglink,
+  & .med-origlink {
+    color: var(--btd-accent-color);
+  }
 
-:matches(html, html.dark) .Button,
-:matches(html, html.dark) .Button.is-visited,
-:matches(html, html.dark) .Button:visited,
-:matches(html, html.dark) button,
-:matches(html, html.dark) button.is-visited,
-:matches(html, html.dark) button:visited,
-:matches(html, html.dark) input.is-visited[type='button'],
-:matches(html, html.dark) input:visited[type='button'],
-:matches(html, html.dark) input[type='button'] {
-  border-color: var(--btd-accent-color);
-  color: var(--btd-accent-color);
-}
+  & .Button,
+  & .Button.is-visited,
+  & .Button:visited,
+  & button,
+  & button.is-visited,
+  & button:visited,
+  & input.is-visited[type='button'],
+  & input:visited[type='button'],
+  & input[type='button'] {
+    border-color: var(--btd-accent-color);
+    color: var(--btd-accent-color);
+  }
 
-:matches(html, html.dark) button.btn-on-dark,
-:matches(html, html.dark) input[type='button'].btn-on-dark {
-  color: var(--btd-accent-color);
-  background: transparent;
-}
+  & button.btn-on-dark,
+  & input[type='button'].btn-on-dark {
+    color: var(--btd-accent-color);
+    background: transparent;
+  }
 
-:matches(html, html.dark) .dropdown-menu .is-selected,
-:matches(html, html.dark) .lst-group .selected,
-:matches(html, html.dark) .lst .s-selected {
-  background-color: var(--btd-accent-color) !important;
-}
+  & .dropdown-menu .is-selected,
+  & .lst-group .selected,
+  & .lst .s-selected {
+    background-color: var(--btd-accent-color) !important;
+  }
 
-:matches(html, html.dark) .Button.btn-fav.s-favorited,
-:matches(html, html.dark) .Button.btn-fav.s-favorited:visited,
-:matches(html, html.dark) .Button.Button--primary,
-:matches(html, html.dark) .Button.Button--primary:visited,
-:matches(html, html.dark) .ButtonGroup--primary > .Button,
-:matches(html, html.dark) .ButtonGroup--primary > .Button:visited,
-:matches(html, html.dark) .ButtonGroup--primary > .ButtonGroup > .Button,
-:matches(html, html.dark) .ButtonGroup--primary > .ButtonGroup > .Button:visited,
-:matches(html, html.dark) .ButtonGroup--primary > .ButtonGroup > button,
-:matches(html, html.dark) .ButtonGroup--primary > .ButtonGroup > button:visited,
-:matches(html, html.dark) .ButtonGroup--primary > .ButtonGroup > input:visited[type='button'],
-:matches(html, html.dark) .ButtonGroup--primary > .ButtonGroup > input[type='button'],
-:matches(html, html.dark) .ButtonGroup--primary > button,
-:matches(html, html.dark) .ButtonGroup--primary > button:visited,
-:matches(html, html.dark) .ButtonGroup--primary > input:visited[type='button'],
-:matches(html, html.dark) .ButtonGroup--primary > input[type='button'],
-:matches(html, html.dark) .s-following .follow-btn:hover .Button.following-text,
-:matches(html, html.dark) .s-following .follow-btn:hover .Button.following-text:visited,
-:matches(html, html.dark) .s-following .follow-btn:hover button.following-text,
-:matches(html, html.dark) .s-following .follow-btn:hover button.following-text:visited,
-:matches(html, html.dark) .s-following .follow-btn:hover input.following-text:visited[type='button'],
-:matches(html, html.dark) .s-following .follow-btn:hover input.following-text[type='button'],
-:matches(html, html.dark) button.btn-fav.s-favorited,
-:matches(html, html.dark) button.btn-fav.s-favorited:visited,
-:matches(html, html.dark) button.Button--primary,
-:matches(html, html.dark) button.Button--primary:visited,
-:matches(html, html.dark) input.btn-fav.s-favorited:visited[type='button'],
-:matches(html, html.dark) input.btn-fav.s-favorited[type='button'],
-:matches(html, html.dark) input.Button--primary:visited[type='button'],
-:matches(html, html.dark) input.Button--primary[type='button'] {
-  background-color: var(--btd-accent-color) !important;
-  border: none !important;
-}
+  & .Button.btn-fav.s-favorited,
+  & .Button.btn-fav.s-favorited:visited,
+  & .Button.Button--primary,
+  & .Button.Button--primary:visited,
+  & .ButtonGroup--primary > .Button,
+  & .ButtonGroup--primary > .Button:visited,
+  & .ButtonGroup--primary > .ButtonGroup > .Button,
+  & .ButtonGroup--primary > .ButtonGroup > .Button:visited,
+  & .ButtonGroup--primary > .ButtonGroup > button,
+  & .ButtonGroup--primary > .ButtonGroup > button:visited,
+  & .ButtonGroup--primary > .ButtonGroup > input:visited[type='button'],
+  & .ButtonGroup--primary > .ButtonGroup > input[type='button'],
+  & .ButtonGroup--primary > button,
+  & .ButtonGroup--primary > button:visited,
+  & .ButtonGroup--primary > input:visited[type='button'],
+  & .ButtonGroup--primary > input[type='button'],
+  & .s-following .follow-btn:hover .Button.following-text,
+  & .s-following .follow-btn:hover .Button.following-text:visited,
+  & .s-following .follow-btn:hover button.following-text,
+  & .s-following .follow-btn:hover button.following-text:visited,
+  & .s-following .follow-btn:hover input.following-text:visited[type='button'],
+  & .s-following .follow-btn:hover input.following-text[type='button'],
+  & button.btn-fav.s-favorited,
+  & button.btn-fav.s-favorited:visited,
+  & button.Button--primary,
+  & button.Button--primary:visited,
+  & input.btn-fav.s-favorited:visited[type='button'],
+  & input.btn-fav.s-favorited[type='button'],
+  & input.Button--primary:visited[type='button'],
+  & input.Button--primary[type='button'] {
+    background-color: var(--btd-accent-color) !important;
+    border: none !important;
+  }
 
-:matches(html, html.dark) .Button.btn-fav.s-favorited:hover,
-:matches(html, html.dark) .Button.Button--primary.is-hover,
-:matches(html, html.dark) .Button.Button--primary:hover,
-:matches(html, html.dark) .Button.is-hover.btn-fav.s-favorited,
-:matches(html, html.dark) .ButtonGroup--primary > .Button.is-hover,
-:matches(html, html.dark) .ButtonGroup--primary > .Button:hover,
-:matches(html, html.dark) .ButtonGroup--primary > .ButtonGroup > .Button.is-hover,
-:matches(html, html.dark) .ButtonGroup--primary > .ButtonGroup > .Button:hover,
-:matches(html, html.dark) .ButtonGroup--primary > .ButtonGroup > button.is-hover,
-:matches(html, html.dark) .ButtonGroup--primary > .ButtonGroup > button:hover,
-:matches(html, html.dark) .ButtonGroup--primary > .ButtonGroup > input.is-hover[type='button'],
-:matches(html, html.dark) .ButtonGroup--primary > .ButtonGroup > input:hover[type='button'],
-:matches(html, html.dark) .ButtonGroup--primary > button.is-hover,
-:matches(html, html.dark) .ButtonGroup--primary > button:hover,
-:matches(html, html.dark) .ButtonGroup--primary > input.is-hover[type='button'],
-:matches(html, html.dark) .ButtonGroup--primary > input:hover[type='button'],
-:matches(html, html.dark) .s-following .follow-btn:hover .Button.following-text:hover,
-:matches(html, html.dark) .s-following .follow-btn:hover .Button.is-hover.following-text,
-:matches(html, html.dark) .s-following .follow-btn:hover button.following-text:hover,
-:matches(html, html.dark) .s-following .follow-btn:hover button.is-hover.following-text,
-:matches(html, html.dark) .s-following .follow-btn:hover input.following-text:hover[type='button'],
-:matches(html, html.dark) .s-following .follow-btn:hover input.is-hover.following-text[type='button'],
-:matches(html, html.dark) button.btn-fav.s-favorited:hover,
-:matches(html, html.dark) button.Button--primary.is-hover,
-:matches(html, html.dark) button.Button--primary:hover,
-:matches(html, html.dark) button.is-hover.btn-fav.s-favorited,
-:matches(html, html.dark) input.btn-fav.s-favorited:hover[type='button'],
-:matches(html, html.dark) input.Button--primary.is-hover[type='button'],
-:matches(html, html.dark) input.Button--primary:hover[type='button'],
-:matches(html, html.dark) input.is-hover.btn-fav.s-favorited[type='button'],
-:matches(html, html.dark) .lst-group .selected a:hover {
-  background-color: var(--btd-accent-color) !important;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)) !important;
-}
+  & .Button.btn-fav.s-favorited:hover,
+  & .Button.Button--primary.is-hover,
+  & .Button.Button--primary:hover,
+  & .Button.is-hover.btn-fav.s-favorited,
+  & .ButtonGroup--primary > .Button.is-hover,
+  & .ButtonGroup--primary > .Button:hover,
+  & .ButtonGroup--primary > .ButtonGroup > .Button.is-hover,
+  & .ButtonGroup--primary > .ButtonGroup > .Button:hover,
+  & .ButtonGroup--primary > .ButtonGroup > button.is-hover,
+  & .ButtonGroup--primary > .ButtonGroup > button:hover,
+  & .ButtonGroup--primary > .ButtonGroup > input.is-hover[type='button'],
+  & .ButtonGroup--primary > .ButtonGroup > input:hover[type='button'],
+  & .ButtonGroup--primary > button.is-hover,
+  & .ButtonGroup--primary > button:hover,
+  & .ButtonGroup--primary > input.is-hover[type='button'],
+  & .ButtonGroup--primary > input:hover[type='button'],
+  & .s-following .follow-btn:hover .Button.following-text:hover,
+  & .s-following .follow-btn:hover .Button.is-hover.following-text,
+  & .s-following .follow-btn:hover button.following-text:hover,
+  & .s-following .follow-btn:hover button.is-hover.following-text,
+  & .s-following .follow-btn:hover input.following-text:hover[type='button'],
+  & .s-following .follow-btn:hover input.is-hover.following-text[type='button'],
+  & button.btn-fav.s-favorited:hover,
+  & button.Button--primary.is-hover,
+  & button.Button--primary:hover,
+  & button.is-hover.btn-fav.s-favorited,
+  & input.btn-fav.s-favorited:hover[type='button'],
+  & input.Button--primary.is-hover[type='button'],
+  & input.Button--primary:hover[type='button'],
+  & input.is-hover.btn-fav.s-favorited[type='button'],
+  & .lst-group .selected a:hover {
+    background-color: var(--btd-accent-color) !important;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)) !important;
+  }
 
-:matches(html, html.dark) .lst-launcher .is-disabled a:active i,
-:matches(html, html.dark) .lst-launcher .is-disabled a:focus i,
-:matches(html, html.dark) .lst-launcher .is-disabled a:hover i,
-:matches(html, html.dark) .lst-launcher .is-disabled a i {
-  color: var(--btd-accent-color) !important;
-}
+  & .lst-launcher .is-disabled a:active i,
+  & .lst-launcher .is-disabled a:focus i,
+  & .lst-launcher .is-disabled a:hover i,
+  & .lst-launcher .is-disabled a i {
+    color: var(--btd-accent-color) !important;
+  }
 
-:matches(html, html.dark) .lst-launcher a:active i,
-:matches(html, html.dark) .lst-launcher a:focus i,
-:matches(html, html.dark) .lst-launcher a:hover i {
-  color: var(--btd-accent-color) !important;
-  opacity: 0.9;
-}
+  & .lst-launcher a:active i,
+  & .lst-launcher a:focus i,
+  & .lst-launcher a:hover i {
+    color: var(--btd-accent-color) !important;
+    opacity: 0.9;
+  }
 
-:matches(html, html.dark) .app-search-fake {
-  border-color: var(--btd-accent-color) !important;
-}
+  & .app-search-fake {
+    border-color: var(--btd-accent-color) !important;
+  }
 
-/* Reset the color of the button to hide the drawer */
-html[class] .js-hide-drawer.Button.tweet-button,
-html[class] .js-hide-drawer.Button.tweet-button:hover {
-  background-image: none !important;
-  color: white;
-  background: #3d5466 !important;
-}
+  /* Reset the color of the button to hide the drawer */
+  html[class] .js-hide-drawer.Button.tweet-button,
+  html[class] .js-hide-drawer.Button.tweet-button:hover {
+    background-image: none !important;
+    color: white;
+    background: #3d5466 !important;
+  }
 
-:matches(html, html.dark) button.btn-on-dark.btn-fav-unfav-text,
-:matches(html, html.dark) button.Button--danger.btn-on-dark,
-:matches(html, html.dark) input.btn-fav-unfav-text[type='button'].btn-on-dark,
-:matches(html, html.dark) input[type='button'].Button--danger.btn-on-dark {
-  color: white;
+  & button.btn-on-dark.btn-fav-unfav-text,
+  & button.Button--danger.btn-on-dark,
+  & input.btn-fav-unfav-text[type='button'].btn-on-dark,
+  & input[type='button'].Button--danger.btn-on-dark {
+    color: white;
+  }
 }
