--- a/src/components/settings/settingsModal.css
+++ b/src/components/settings/settingsModal.css
@@ -21,10 +21,10 @@
 
 .btd-settings-modal {
   color: var(--settings-modal-text);
-  min-width: 100vw;
-  min-height: 100vh;
+  width: 100%;
   background-color: var(--settings-modal-background);
   display: grid;
+  height: 100%;
   grid-template-areas:
     'header   header'
     'sidebar  content'
@@ -32,6 +32,7 @@
   grid-template-rows: auto 1fr auto;
   grid-template-columns: auto 1fr;
   border-radius: 10px;
+  position: absolute;
 
   font-family: system-ui;
 
@@ -78,7 +79,7 @@
 
 .btd-settings-content {
   grid-area: content;
-  min-height: 400px;
+  overflow: auto;
 }
 
 .btd-settings-footer {
