--- a/src/features/addTweetActions.css
+++ b/src/features/addTweetActions.css
@@ -11,6 +11,10 @@
   padding-bottom: 8px;
 }
 
-.btd-loaded[btd-hide-buttons-count='true'] :matches(.like-count, .retweet-count, .reply-count) {
-  display: none;
+.btd-loaded[btd-hide-buttons-count='true'] .column .tweet-action > .icon {
+  font-size: 16px;
+}
+
+.btd-loaded.is-narrow-columns .column .tweet-action > .icon {
+  font-size: 15px !important;
 }
